--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body{
+  width: 600px;
+}
+
 h1 {
   color: red;
 }
@@ -8,4 +12,8 @@ h2 {
 
 p {
   background-color: yellow;
+}
+
+img {
+  width: 100%;
 }
