générateur de qrcode & intégration dans htlm

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,3 +17,13 @@ p {
 img {
   width: 100%;
 }
+h4 {
+  display: none;
+}
+
+.qrcode {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+}
