ajout des logos + mentions légales + css special pour articles météo

--- a/stylesheet_meteo.css
+++ b/stylesheet_meteo.css
@@ -3,15 +3,15 @@ body{
 }
 
 h1 {
-  color: red;
+  color: green;
 }
 
 h2 {
-  color: blue;
+  color: pink;
 }
 
 p {
-  background-color: yellow;
+  background-color: blue;
 }
 
 img {
