--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,11 +8,11 @@ html, body{
 }
 
 h6 {
-  font-size:16pt;
+  font-size:28pt;
   font-family:"Barlow Condensed", sans-serif;
-  font-weight: medium;
+  font-weight: 500;
   background-color: black;
-  padding: 2em 2em;
+  padding: 20px;
   color: white;
   text-align: center;
   text-transform: uppercase;
@@ -29,36 +29,44 @@ h1 {
 }
 
 h2 {
-  font-size:28pt;
+  font-size:50pt;
   font-family:"Barlow Condensed", sans-serif;
   font-weight: Semi-bold;
   text-align: center;
+  margin: 20px 50px;
 }
 
 h3 {
-  font-size:10pt;
+  font-size:24pt;
   font-family:"Inter", sans-serif;
   text-align: justify;
+  font-weight: 400;
+  padding: 20px 0px;
 }
 
 h5 {
-  font-size:12pt;
+  font-size:24pt;
   font-family:"Barlow Condensed", sans-serif;
-  font-weight: Semi-bold;
+  font-weight: 500;
+  margin: 20px 50px;
 }
 
 
 p {
-  font-size:10pt;   
-  font-family: Inter, sans-serif;
-  font-weight: regular;
+  font-size:12pt;   
   font-family:"Inter", sans-serif;
+  font-weight: 300;
   text-align: justify;
+  
 }
+
 
 img {
   width: 100%;
-}
+} 
+
+
+ 
 h4 {
   display: none;
 }
@@ -77,9 +85,6 @@ h4 {
   padding: 40px 61px;
   display: block;
   margin: 1em auto;
-  /*
-  margin-left: auto;
-  margin-right: auto;*/
 }
 
 .presentation{
@@ -98,14 +103,21 @@ h4 {
 
 .bloclogo{
   margin-top: 5em;
-  position: relative;
-  width: 100%;
+  /*position: relative;*/
+  width: 570px;
 }
 
+/*
 .bloclogo > img.gauche {
   width: 60%;
 }
 
 .bloclogo > img.droite {
   width: 39%;
+}
+*/
+
+.blocplus {
+  width: 570px;
+  margin: 20px 0px;
 }
